--- a/Ex1_315435495_315409508/Father/Father.vcxproj.filters
+++ b/Ex1_315435495_315409508/Father/Father.vcxproj.filters
@@ -18,5 +18,22 @@
     <ClCompile Include="main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="father_func.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sonProcessCreation.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="HardCodedData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="father_func.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sonProcessCreation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
